--- a/src/common/css/layout.scss
+++ b/src/common/css/layout.scss
@@ -1,5 +1,12 @@
 body {
-  * {
-    box-sizing: border-box;
-  }
+  background-color: #fff;
+  overflow-y: scroll;
+  min-height: 100vh;
+  background-position: bottom;
+  background-position-x: center;
+  background-repeat: repeat-x;
+  background-size: 60vh;
+  background-image: url('../circuit_dots.svg');
+  padding-bottom: 30vh;
+  position: relative;
 }
