--- a/src/pages/_app.scss
+++ b/src/pages/_app.scss
@@ -1,4 +1,7 @@
+//> MDB
+// "Material Design for Bootstrap" is a great UI design framework
 @import 'mdb-react-ui-kit/dist/css/mdb.min.css';
+
 @import '@cms/cms.scss';
 
 .App {
