Switch to external jaen-cms module

--- a/src/pages/_app.scss
+++ b/src/pages/_app.scss
@@ -1,5 +1,5 @@
 @import 'mdb-react-ui-kit/dist/css/mdb.min.css';
-@import '@cms/cms.scss';
+@import 'jaen-cms/lib/cms.scss';
 
 .App {
   text-align: center;
