--- a/src/common/css/layout.scss
+++ b/src/common/css/layout.scss
@@ -10,3 +10,22 @@ body {
   padding-bottom: 30vh;
   position: relative;
 }
+
+.cms-center{
+  .public-DraftStyleDefault-ltr {
+      text-align: center !important;
+  }
+}
+
+h1{
+  font-weight: 400 !important;
+}
+
+h2{
+  font-weight: 400 !important;
+}
+
+h5{
+  padding-top: 2rem;
+  font-weight: 400 !important;
+}
