--- a/src/pages/_app.scss
+++ b/src/pages/_app.scss
@@ -2,7 +2,7 @@
 // "Material Design for Bootstrap" is a great UI design framework
 @import 'mdb-react-ui-kit/dist/css/mdb.min.css';
 
-@import '@cms/cms.scss';
+@import 'jaen-cms/lib/cms.scss';
 
 .App {
   text-align: center;
